--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <header class = "header-texts"></header>
-  <main class = "main-container"></main>
+  <main></main>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.js" crossorigin="anonymous"></script>
   <script src="app.js"></script>
 </body>
