--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     type="text/css" />
   <link href="app.css" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" href="favicon.png">
 </head>
 
 <body>
