--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
   <title>State Capitals Quiz</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet"
     type="text/css" />
+   
+
   <link href="app.css" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+
   <link rel="icon" type="image/png" href="favicon.png">
 </head>
 
