--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <header></header> 
+  <header role="banner"></header> 
   <!--
   /*class = "header-texts">-->
   <main></main>
