--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 </head>
 
 <body>
-  <header role="banner"></header> 
+  <header  aria-live="polite" role="banner"></header> 
   <!--
   /*class = "header-texts">-->
-  <main></main>
+  <main aria-live="polite"></main>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.js" crossorigin="anonymous"></script>
   <script src="app.js"></script>
 </body>
